add header and css for nav header

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-    "cSpell.words": [
-        "Laravel",
-        "Maks",
-        "webfonts"
-    ]
+	"cSpell.words": ["blackpure", "Laravel", "Maks", "webfonts"]
 }
