example for portfolio

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-	"cSpell.words": ["blackpure", "Laravel", "Maks", "webfonts"]
+	"cSpell.words": [
+		"blackpure",
+		"Laravel",
+		"Maks",
+		"noreferrer",
+		"webfonts",
+		"сontacts"
+	]
 }
